syntax = "proto3";
option java_package = "com.netty.protobuf.proto";
option java_outer_classname = "SubscribeRespProto";
message SubscribeResp {
    int32 subReqID = 1;
    int32 respCode = 2;
    string desc = 3;
}